--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
 	</head>
 	<body class="landing is-preload">
 
@@ -27,10 +28,10 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a href="#about">About</a></li>
+											<li><a href="#links">Links</a></li>
+											<li><a href="#cta">Team</a></li>
+											<li><a href="https://app.birm.xyz" target="_blank">The App</a></li>
 										</ul>
 									</div>
 								</li>
@@ -42,47 +43,46 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>BIRM</h2>
-							<p>Another fine responsive<br />
-							site template freebie<br />
-							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
+							<p>Connect with the<br />
+							 people around you</p>
 							<ul class="actions special">
-								<li><a href="#" class="button primary">Test the MVP</a></li>
+								<li><a href="https://app.birm.xyz" class="button primary" target="_blank">Test the MVP</a></li>
 							</ul>
 						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
+						<a href="#about" class="more scrolly">Learn More</a>
 					</section>
 
-				<!-- One -->
-					<section id="one" class="wrapper style1 special">
+				<!-- About -->
+					<section id="about" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
 								<h2>What is Birm?</h2>
 								<p>During the last couple decades we have been slowly migrating into the hyper-connected world where it's easier to see what our highschool classmate is having for breakfast in Bali than connecting with our neighbours. <br>Birm is an open project trying to connect people that are <b>close.</b></p>
 							</header>
 							<ul class="icons major">
-								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
+								<li><span class="icon solid fa-users fas major style3"><span class="label">Closer</span></span></li>
+								<li><span class="icon solid fa-user-shield major style3"><span class="label">Anonymous</span></span></li>
+								<li><span class="icon solid fa-comments major style3"><span class="label">Hear</span></span></li>
 							</ul>
 						</div>
 					</section>
 
-				<!-- Two -->
-					<section id="two" class="wrapper alt style2">
+				<!-- About Details -->
+					<section id="about-details" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/closer.jpg" alt="" /></div><div class="content">
 								<h2>Closer is better</h2>
 								<p>The project is based on proximity to others. The starting point is the GPS coordinates of your phone.</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/anonymity.jpg" alt="" /></div><div class="content">
 								<h2>Anonymity first</h2>
 								<p>Speak your mind freely. Choose your identity every time (or not).</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/hear.jpg" alt="" /></div><div class="content">
 								<h2>We hear you</h2>
 								<p>We're not yet sure about how far this will go. We're happy to get feedback. Or get help. Let us know.</p>
 							</div>
@@ -90,26 +90,26 @@
 					</section>
 
 				<!-- Three -->
-					<section id="three" class="wrapper style3 special">
+					<section id="links" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
 								<h2>The Prototype</h2>
 								<p>We're pretty open about building Birm.</p>
 							</header>
 							<ul class="features">
-								<li class="icon solid fa-laptop">
+								<li class="icon solid fa-mobile">
 									<h3>Test the app here</h3>
-									<p>Visit <a href="https://app.birm.xyz">app.birm.xyz</a> to test the latest version of the app.</p>
+									<p>Visit <a href="https://app.birm.xyz" target="_blank">app.birm.xyz</a> to test the latest version of the app.</p>
 								</li>
 								<li class="icon solid fa-code">
 									<h3>Here's the repo</h3>
-									<p>Head to our git at <a href="https://github.com/tomyo/birm">github.com/tomyo/birm</a>
+									<p>Head to our git at <a href="https://github.com/tomyo/birm" target="_blank">github.com/tomyo/birm</a>
 								</li>
 								<li class="icon fa-paper-plane">
 									<h3>Give us feedback</h3>
 									<p>We would love to hear from you. Drop us a line at <b>team [at] birm.xyz</b></p>
 								</li>
-								<li class="icon solid fa-headphones-alt">
+								<li class="icon solid fa-screwdriver">
 									<h3>Work in Progress</h3>
 									<p>It's also bout the journey. Check it out here: <a href="javascript:;">[coming soon]</a></p>
 								</li>
@@ -126,30 +126,40 @@
 					</section>
 
 				<!-- CTA -->
-					<section id="cta" class="wrapper style4">
+					<section id="cta" class="wrapper style4 ">
 						<div class="inner">
 							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+								<h2>Tomas</h2>
+								<p>Tomás is a dreamer/developer that has too many ideas for the short days and a knack for rapid-development. You can find him in your nearest hackathon.</p>
 							</header>
-							<ul class="actions stacked">
-								<li><a href="#" class="button fit primary">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
-							</ul>
+							
+							<img class="avatar" src="images/tom.jpeg">
+							
 						</div>
+
+						<hr>
+						<div class="inner">
+							<header>
+								<h2>Juan</h2>
+								<p>Juan is an optimist/product-operations guy that would choose immortality as his super-power so he can keep learning forever.</p>
+							</header>
+							<img class="avatar" src="images/juan.jpeg">
+						</div>
+
 					</section>
+
 
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
+							<li><a href="javascript:;" class="icon brands fa-linkedin"><span class="label">Facebook</span></a></li>
+							<li><a href="javascript:;" class="icon brands fa-telegram"><span class="label">Instagram</span></a></li>
+							<!-- <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
+							<li><a href="javascript:;" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Birm.xyz</li><!-- <li>Template Design: <a href="http://html5up.net">HTML5 UP</a> --></li>
 						</ul>
 					</footer>
 
