Add favicon and logo
cac

--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
 -->
 <html>
 	<head>
-		<title>BIRM.xyz</title>
+		<title>BIRM</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="apple-touch-icon" sizes="180x180" href="/images/logos/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/images/logos/favicon-16x16.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/images/logos/favicon-32x32.png">
+		<link rel="icon" href="favicon.ico" type="image/x-icon" />
+		<link rel="manifest" href="/site.webmanifest">
 
 	</head>
 	<body class="landing is-preload">
@@ -20,6 +25,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
+
 						<h1><a href="index.html">BIRM</a></h1>
 						<nav id="nav">
 							<ul>
@@ -42,6 +48,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
+							<img src="/images/logos/android-chrome-192x192.png">
 							<h2>BIRM</h2>
 							<p>Connect with the<br />
 							 people around you</p>
